fix unreadable links when playing search results

--- a/copyparty/web/browser.css
+++ b/copyparty/web/browser.css
@@ -622,7 +622,8 @@ input[type="checkbox"]:checked+label {
 #files td.min a {
 	display: none;
 }
-#files tr.play td {
+#files tr.play td,
+#files tr.play div a {
 	background: #fc4;
 	border-color: transparent;
 	color: #400;
